[tool.poetry]
name = "unit-testing-blog"
version = "0.1.0"
description = ""
authors = ["Sam Cook <scook@esri.com>"]
readme = "README.md"
packages = [{include = "pkg"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.4.12"
mypy = "^1.2.0"
black = "^23.3.0"
coveralls = "^3.3.1"
pyyaml = "^6.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
